creo que lo deje en la 11?

--- a/queries.ipynb
+++ b/queries.ipynb
@@ -87,125 +87,27 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T05:24:00.582297Z",
-     "start_time": "2024-07-31T05:24:00.562738Z"
+     "end_time": "2024-07-31T05:27:57.220642Z",
+     "start_time": "2024-07-31T05:27:57.209306Z"
     }
    },
    "cell_type": "code",
-   "source": "print(pd.read_sql(\"SELECT * FROM Customers LIMIT 1\", engine))",
+   "source": "print(pd.read_sql(\"SELECT * FROM Products LIMIT 1\", engine))",
    "id": "dad061238b648891",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  CustomerID          CompanyName   ContactName          ContactTitle  \\\n",
-      "0      ALFKI  Alfreds Futterkiste  Maria Anders  Sales Representative   \n",
+      "   ProductID ProductName  SupplierID  CategoryID     QuantityPerUnit  \\\n",
+      "0          1        Chai           1           1  10 boxes x 20 bags   \n",
       "\n",
-      "         Address    City          Region PostalCode  Country        Phone  \\\n",
-      "0  Obere Str. 57  Berlin  Western Europe      12209  Germany  030-0074321   \n",
-      "\n",
-      "           Fax  \n",
-      "0  030-0076545  \n"
+      "   UnitPrice  UnitsInStock  UnitsOnOrder  ReorderLevel Discontinued  \n",
+      "0         18            39             0            10            0  \n"
      ]
     }
    ],
-   "execution_count": 65
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-31T05:12:00.536183Z",
-     "start_time": "2024-07-31T05:12:00.502318Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# Obtener la estructura de cada tabla\n",
-    "for table in tables:\n",
-    "    table_name = table[0]\n",
-    "    cursor.execute(f\"PRAGMA table_info({table_name});\")\n",
-    "    columns = cursor.fetchall()\n",
-    "    print(f\"\\nEstructura de la tabla '{table_name}':\")\n",
-    "    for column in columns:\n",
-    "        print(f\"Nombre: {column[1]}, Tipo: {column[2]}\")\n"
-   ],
-   "id": "9ec315ca5b71f19d",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Estructura de la tabla 'Categories':\n",
-      "Nombre: CategoryID, Tipo: INTEGER\n",
-      "Nombre: CategoryName, Tipo: TEXT\n",
-      "Nombre: Description, Tipo: TEXT\n",
-      "Nombre: Picture, Tipo: BLOB\n",
-      "\n",
-      "Estructura de la tabla 'sqlite_sequence':\n",
-      "Nombre: name, Tipo: \n",
-      "Nombre: seq, Tipo: \n",
-      "\n",
-      "Estructura de la tabla 'CustomerCustomerDemo':\n",
-      "Nombre: CustomerID, Tipo: TEXT\n",
-      "Nombre: CustomerTypeID, Tipo: TEXT\n",
-      "\n",
-      "Estructura de la tabla 'CustomerDemographics':\n",
-      "Nombre: CustomerTypeID, Tipo: TEXT\n",
-      "Nombre: CustomerDesc, Tipo: TEXT\n",
-      "\n",
-      "Estructura de la tabla 'Customers':\n",
-      "Nombre: CustomerID, Tipo: TEXT\n",
-      "Nombre: CompanyName, Tipo: TEXT\n",
-      "Nombre: ContactName, Tipo: TEXT\n",
-      "Nombre: ContactTitle, Tipo: TEXT\n",
-      "Nombre: Address, Tipo: TEXT\n",
-      "Nombre: City, Tipo: TEXT\n",
-      "Nombre: Region, Tipo: TEXT\n",
-      "Nombre: PostalCode, Tipo: TEXT\n",
-      "Nombre: Country, Tipo: TEXT\n",
-      "Nombre: Phone, Tipo: TEXT\n",
-      "Nombre: Fax, Tipo: TEXT\n",
-      "\n",
-      "Estructura de la tabla 'Employees':\n",
-      "Nombre: EmployeeID, Tipo: INTEGER\n",
-      "Nombre: LastName, Tipo: TEXT\n",
-      "Nombre: FirstName, Tipo: TEXT\n",
-      "Nombre: Title, Tipo: TEXT\n",
-      "Nombre: TitleOfCourtesy, Tipo: TEXT\n",
-      "Nombre: BirthDate, Tipo: DATE\n",
-      "Nombre: HireDate, Tipo: DATE\n",
-      "Nombre: Address, Tipo: TEXT\n",
-      "Nombre: City, Tipo: TEXT\n",
-      "Nombre: Region, Tipo: TEXT\n",
-      "Nombre: PostalCode, Tipo: TEXT\n",
-      "Nombre: Country, Tipo: TEXT\n",
-      "Nombre: HomePhone, Tipo: TEXT\n",
-      "Nombre: Extension, Tipo: TEXT\n",
-      "Nombre: Photo, Tipo: BLOB\n",
-      "Nombre: Notes, Tipo: TEXT\n",
-      "Nombre: ReportsTo, Tipo: INTEGER\n",
-      "Nombre: PhotoPath, Tipo: TEXT\n",
-      "\n",
-      "Estructura de la tabla 'EmployeeTerritories':\n",
-      "Nombre: EmployeeID, Tipo: INTEGER\n",
-      "Nombre: TerritoryID, Tipo: TEXT\n"
-     ]
-    },
-    {
-     "ename": "OperationalError",
-     "evalue": "near \"Order\": syntax error",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mOperationalError\u001B[0m                          Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[41], line 4\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m table \u001B[38;5;129;01min\u001B[39;00m tables:\n\u001B[0;32m      3\u001B[0m     table_name \u001B[38;5;241m=\u001B[39m table[\u001B[38;5;241m0\u001B[39m]\n\u001B[1;32m----> 4\u001B[0m     \u001B[43mcursor\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexecute\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43mf\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mPRAGMA table_info(\u001B[39;49m\u001B[38;5;132;43;01m{\u001B[39;49;00m\u001B[43mtable_name\u001B[49m\u001B[38;5;132;43;01m}\u001B[39;49;00m\u001B[38;5;124;43m);\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      5\u001B[0m     columns \u001B[38;5;241m=\u001B[39m cursor\u001B[38;5;241m.\u001B[39mfetchall()\n\u001B[0;32m      6\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124mEstructura de la tabla \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtable_name\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m:\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "\u001B[1;31mOperationalError\u001B[0m: near \"Order\": syntax error"
-     ]
-    }
-   ],
-   "execution_count": 41
+   "execution_count": 72
   },
   {
    "metadata": {
@@ -810,12 +712,135 @@
    "execution_count": 69
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-31T05:28:43.174459Z",
+     "start_time": "2024-07-31T05:28:43.157516Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Consulta: Muestra los nombres de los productos que tienen menos de 10 unidades en stock.\n",
+    "query_6 = pd.read_sql(\"\"\"\n",
+    "    SELECT ProductName FROM Products WHERE UnitsInStock < 10\n",
+    "    \"\"\", engine)\n",
+    "query_6"
+   ],
+   "id": "31f74f733b0b3663",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                   ProductName\n",
+       "0       Chef Anton's Gumbo Mix\n",
+       "1   Northwoods Cranberry Sauce\n",
+       "2                 Alice Mutton\n",
+       "3          Sir Rodney's Scones\n",
+       "4      Thüringer Rostbratwurst\n",
+       "5            Gorgonzola Telino\n",
+       "6           Mascarpone Fabioli\n",
+       "7                  Rogede sild\n",
+       "8                Perth Pasties\n",
+       "9    Louisiana Hot Spiced Okra\n",
+       "10         Scottish Longbreads\n",
+       "11               Longlife Tofu"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Chef Anton's Gumbo Mix</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Northwoods Cranberry Sauce</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alice Mutton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sir Rodney's Scones</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Thüringer Rostbratwurst</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Gorgonzola Telino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Mascarpone Fabioli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Rogede sild</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Perth Pasties</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Louisiana Hot Spiced Okra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Scottish Longbreads</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Longlife Tofu</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 73
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "31f74f733b0b3663"
+   "source": [
+    "#Consulta: Muestra los IDs de los pedidos y el nombre del transportista para los pedidos enviados por el transportista con ID 1.\n",
+    "query_7 = pd.read_sql(\"\"\"\n",
+    "    SELECT ProductName FROM Products WHERE UnitsInStock < 10\n",
+    "    \"\"\", engine)\n",
+    "query_7"
+   ],
+   "id": "4282c6a1ca068f01"
   }
  ],
  "metadata": {
